--- a/이미지_암호화_복호화.ipynb
+++ b/이미지_암호화_복호화.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNaXDNiICDQnLhW0kAbZIQp",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mathloxer/encryption_decryption_of_image/blob/main/%EC%9D%B4%EB%AF%B8%EC%A7%80_%EC%95%94%ED%98%B8%ED%99%94_%EB%B3%B5%ED%98%B8%ED%99%94.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
